New in the wild

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -376,6 +376,9 @@
 <h4><a name="science"></a>Scientific</h4>
 <ul class="square-list">
     <li><a href="http://www.allencell.org/deep-cell-zoom.html">Allen Cell Explorer</a></li>
+    <li>
+        <a href="https://www.astroboh.it/Seadragon.aspx?Aut=0&id=112">AstroBOH – High-resolution Deep Sky Astrophotography</a>
+    </li>
     <li><a href="https://als-app.org">Astro Live Stacker</a></li>
     <li><a href="https://www.doc.ic.ac.uk/~dmcginn/adjmat.html">Bitcoin Blockchain Explorer</a></li>
     <li><a href="http://cancer.digitalslidearchive.net/">Cancer Digital Slide Archive</a></li>
