--- a/index.html
+++ b/index.html
@@ -266,10 +266,13 @@
             <li><a href="https://github.com/openseadragon/bookmark-url">Bookmark URL</a> updates the page URL with the current zoom/pan.</li>
             <li><a href="https://github.com/altert/OpenSeadragonCanvasOverlay">OpenSeadragonCanvasOverlay</a> allows you to add canvas overlay that pans and zooms with OpenSeadragon viewer.</li>
             <li><a href="https://github.com/joshua-gould/OpenSeadragonCanvasOverlayHd">OpenSeadragonCanvasOverlayHd</a> OpenSeadragonCanvasOverlayHd</a> allows you to add a canvas overlay that renders nicely on retina displays, pans and zooms with OpenSeadragon viewer, and supports multi-images.</li>
+            <li><a href="https://github.com/rssaini01/openseadragon-capture">OpenSeadragonCapture</a> allows you to capture high-quality screenshots from OpenSeadragon viewers with optional overlay layers.</li>
             <li><a href="https://github.com/WT-SML/doodle">Doodle</a> allows you to draw graphics on the image. It performs extremely well, able to create 100,000 interactive shapes.</li>
             <li><a href="https://github.com/harshalitalele/OpenSeadragonDraggableNavigator/">OpenSeadragonDraggableNavigator</a> allows you to make navigator draggable over the OpenSeadragon viewer.</li>
+            <li><a href="https://github.com/rssaini01/openseadragon-fabric-overlay">OpenSeadragonFabricOverlay</a> is a modern, TypeScript-based Fabric.js overlay for OpenSeadragon that enables interactive annotations, drawing, and shape manipulation. <b>[Compatible with v5+]</b></li>
             <li><a href="https://github.com/altert/OpenseadragonFabricjsOverlay">OpenSeadragonFabricjsOverlay</a> allows you to add Fabric.js canvas overlay that pans and zooms with OpenSeadragon viewer.</li>
-            <li><a href="https://github.com/usnistgov/OpenSeadragonFiltering">OpenSeadragonFiltering</a> allows you to add image filters in OpenSeadragon.</li>
+            <li><a href="https://github.com/rssaini01/openseadragon-filters">OpenSeadragonFilters</a> is a modern, TypeScript-based plugin that adds real-time, WebGL-accelerated image filtering to OpenSeadragon with full type safety. <b>[Compatible with v5+]</b></li>
+            <li><a href="https://github.com/usnistgov/OpenSeadragonFiltering">OpenSeadragonFiltering</a> allows you to add image filters in OpenSeadragon. <b>[Not compatible with v5+]</b></li>
             <li><a href="https://github.com/thejohnhoffer/viaWebGL">OpenSeadragonGL</a> allows you to run WebGL shaders on all tiles in OpenSeadragon.</li>
             <li><a href="https://github.com/picturae/OpenSeadragonGuides">OpenSeadragonGuides</a> allows you to add horizontal and vertical guidelines to the Openseadragon viewer.</li>
             <li><a href="https://github.com/antonioxdias/OpenSeadragonHTMLelements">OpenSeadragonHTMLelements</a> allows you to add HTML elements that pan, zoom, rotate and flip with the Openseadragon viewer.</li>
